@@ -1,4 +1,5 @@
 0.1.1
  - setup: move to src layout
+ - docs: properly employ license GPL-3.0-or-later
 0.1.0
  - initial release
